reset password not display to social user

--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -35,7 +35,7 @@
                                                     class="text-white text-center my_account">bank
                                                     account</a>
                                             </li>
-                                            <li><a routerLink="/reset-password"
+                                            <li *ngIf="manualLoginUser"><a routerLink="/reset-password"
                                                     class="text-white text-center my_account">Reset
                                                     Password</a></li>
                                             <li><a (click)="logout()"
@@ -123,7 +123,7 @@
                                                 event</a></li>
                                         <li><a routerLink="/createEvent" class="text-white text-center my_event">new
                                                 event</a></li>
-                                        <li><a routerLink="/reset-password"
+                                        <li *ngIf="manualLoginUser"><a routerLink="/reset-password"
                                                 class="text-white text-center my_account">Reset
                                                 Password</a></li>
                                         <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
