--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -23,7 +23,7 @@
                             <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
                                     account</a>
                             </li>
-                            <li><a routerLink="/reset-password" class="text-white text-center my_account">Reset
+                            <li *ngIf="manualLoginUser"><a routerLink="/reset-password" class="text-white text-center my_account">Reset
                                     Password</a></li>
                             <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
                             </li>
