--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="!adminUser == 'admin'">
+<div [hidden]="adminUser !== 'admin'">
   <div class="header" >
     <a id="menu-action" >
       <i class="fa fa-bars"></i>
