--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -510,7 +510,7 @@
                                         <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
                                                 account</a>
                                         </li>
-                                        <li><a routerLink="/reset-password"
+                                        <li *ngIf="manualLoginUser"><a routerLink="/reset-password"
                                                 class="text-white text-center my_account">Reset
                                                 Password</a></li>
                                         <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
@@ -562,7 +562,7 @@
                                         <li><a routerLink="/bankDetails" class="text-white text-center my_account">bank
                                                 account</a>
                                         </li>
-                                        <li><a routerLink="/reset-password"
+                                        <li *ngIf="manualLoginUser"><a routerLink="/reset-password"
                                                 class="text-white text-center my_account">Reset
                                                 Password</a></li>
                                         <li><a (click)="logout()" class="text-white text-center my_account">Logout</a>
@@ -683,7 +683,7 @@
                                                             class="text-white text-center my_account">bank
                                                             account</a>
                                                     </li>
-                                                    <li><a routerLink="/reset-password"
+                                                    <li *ngIf="manualLoginUser"><a routerLink="/reset-password"
                                                             class="text-white text-center my_account">Reset
                                                             Password</a></li>
                                                     <li><a (click)="logout()"
