--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -38,7 +38,7 @@
                                         </li>
                                         <li><a routerLink="/bankDetails" class="text-white my_account">bank
                                                 account</a></li>
-                                        <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                        <li *ngIf="manualLoginUser"><a routerLink="/reset-password" class="text-white my_account">Reset
                                                 Password</a></li>
                                         <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
                                     </ul>
