--- a/src/styles.css
+++ b/src/styles.css
@@ -5776,6 +5776,7 @@ tr.blue-table-header {
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: #fff;
+	margin-bottom: 20px;
 }
 
 .blue-bg {
@@ -5783,6 +5784,7 @@ tr.blue-table-header {
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: #fff;
+	margin-bottom: 20px;
 }
 
 .gray-bg {
