--- a/src/app/total-events/total-events.component.css
+++ b/src/app/total-events/total-events.component.css
@@ -1,11 +1,16 @@
-.theme-background{
+/* .theme-background{
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
-}
+} */
 
 .on_off{
-    height: 25px;
-    width:  25px;
+    height: 30px;
+    width:  30px;
     border-radius: 50%;
+    margin-right: 25px;
+}
+.event-status{
+    display: inline-flex;
+    width: 100%;
 }
